--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,9 @@ body::before {
   opacity: 0.9;
   z-index: -1;
 }
+html { text-rendering: optimizeLegibility; }
+body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
 
 /* Cinematic snapping between sections on desktop */
 @media (min-width: 1024px) {
